# ao3scraper

./: .gitignore  README.md  alembic.ini  ao3scraper.py  config.yaml  fics.db  fics.yaml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
alembic/: README.md  env.py
alembic/versions/: ca2dfefaf0b6_1_0_0_switched_to_ao3_api_for_.py
ao3scraper/: __main__.py  cli.py  constants.py  construct_list.py  database.py  file_validator.py  paths.py
ao3scraper/tests/: test_ao3scraper.py
